--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+server.port=8080
+spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.username=karani-dev
+spring.datasource.password=felixmaina
+#create_schema
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql= true
+spring.jpa.properties.hibernate.dialect=org.hibernate.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql= true
