--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:5432/test
-spring.datasource.username=karani-dev
-spring.datasource.password=felixmaina
-#create_schema
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql= true
-spring.jpa.properties.hibernate.dialect=org.hibernate.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql= true
-logging.file.path=logs
-logging.file.name=${loggging.path}/myapp.log
+#server.port=8081
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url= jdbc:postgresql://localhost:5432/moviedata
+#spring.datasource.username= karani-dev
+#spring.datasource.password= felixmaina
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+## Hibernate ddl auto (create, create-drop, validate, update)
+#spring.jpa.hibernate.ddl-auto= create
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
